contrast issue

--- a/css/large.css
+++ b/css/large.css
@@ -91,7 +91,7 @@ ul li {
 
 .sidenav {
   height: 100%;
-  width: 0rem;
+  width: 20rem;
   position: fixed;
   z-index: 1;
   top: 0;
